# ur_proxysim_description

./: .gitignore  CMakeLists.txt  package.xml
gazebo_models/human_actor/: model.config
meshes/custom/: tof_calibration_cell_500.stl  tof_calibration_plane_1m.stl
rviz/: view_robot_ur10e_cloud.rviz
src/: custom_sync_policy.hpp  tof_cloud_processing_node.cpp
urdf/: calibration_plane.xacro  ur.urdf.xacro  ur_flange_tof.urdf.xacro  ur_flange_tof_calib.urdf.xacro  ur_flange_tof_imu.urdf.xacro  ur_rings_tof.urdf.xacro
